cluster/apps/envoy-system/octoprint/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: octo
  namespace: envoy-system
spec:
  type: ExternalName
  externalName: octo.zinn.ca.
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
